--- a/content/publication/zhang-2023-fdnerf/cite.bib
+++ b/content/publication/zhang-2023-fdnerf/cite.bib
@@ -1,8 +1,7 @@
-@misc{zhang2023fdnerf,
- archiveprefix = {arXiv},
- author = {Hao Zhang and Yanbo Xu and Tianyuan Dai and Yu-Wing and Tai Chi-Keung Tang},
- eprint = {2306.00783},
- primaryclass = {cs.CV},
- title = {FDNeRF: Semantics-Driven Face Reconstruction, Prompt Editing and Relighting with Diffusion Models},
- year = {2023}
+@article{zhang2024facednerf,
+  title={FaceDNeRF: Semantics-Driven Face Reconstruction, Prompt Editing and Relighting with Diffusion Models},
+  author={Zhang, Hao and DAI, Tianyuan and Xu, Yanbo and Tai, Yu-Wing and Tang, Chi-Keung},
+  journal={Advances in Neural Information Processing Systems},
+  volume={36},
+  year={2024}
 }
