--- a/publications.bib
+++ b/publications.bib
@@ -15,3 +15,12 @@
       archivePrefix={arXiv},
       primaryClass={cs.CV}
 }
+
+@misc{zhang2024fednerf,
+      title={FED-NeRF: Achieve High 3D Consistency and Temporal Coherence for Face Video Editing on Dynamic NeRF}, 
+      author={Hao Zhang and Yu-Wing Tai and Chi-Keung Tang},
+      year={2024},
+      eprint={2401.02616},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
